--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   },
   "type": "module",
   "dependencies": {
-    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.1",
     "sveltestrap": "^5.6.3"
-  }
+  },
+  "license": "MIT"
 }
