--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -12,6 +12,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2.3.1
 
+      - name: Build
+        run: |
+          npm ci
+          npm run start
+
       - uses: cypress-io/github-action@v2
         with:
           browser: chrome
