--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -12,13 +12,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2.3.1
 
-      - name: Build
-        run: |
-          npm ci
-          npm run dev
-
       - uses: cypress-io/github-action@v2
         with:
-          browser: chrome
-          headless: true
+          start: npm run dev
           working-directory: e2e
