--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -14,6 +14,6 @@ jobs:
 
       - uses: cypress-io/github-action@v2
         with:
-          start: npm run dev
+          start: npm run dev --prefix ../
           working-directory: e2e
           CYPRESS_baseurl: 'http://localhost:3000'
