--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -16,3 +16,5 @@ jobs:
         with:
           start: npm run dev --prefix ../
           working-directory: e2e
+        env:
+          CYPRESS_baseUrl: http://localhost:3000
