--- a/.github/workflows/cypress-tests.yml
+++ b/.github/workflows/cypress-tests.yml
@@ -15,6 +15,6 @@ jobs:
       - uses: cypress-io/github-action@v2
         with:
           start: npm run dev
-          command: npm run test:cypress:integratio
+          command: npm run test:cypress:integration
         env:
           CYPRESS_baseUrl: http://localhost:3000
