--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
     "test:cypress": "cypress open -C cypress/cypress.json",
     "test:cypress:integration": "cypress run --headless -C cypress/cypress.json",
-    "test:jest": "jest"
+    "test:jest": "jest --collectCoverage=true"
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
