--- a/package.json
+++ b/package.json
@@ -1,47 +1,49 @@
 {
-  "name": "wichteln",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
-    "preview": "svelte-kit preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-    "test:cypress": "cypress open -C cypress/cypress.json",
-    "test:cypress:integration": "cypress run --headless -C cypress/cypress.json",
-    "test:jest": "jest --collectCoverage=true"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.16.7",
-    "@babel/preset-env": "^7.16.8",
-    "@sveltejs/adapter-static": "^1.0.0-next.21",
-    "@sveltejs/kit": "next",
-    "@types/jest": "^27.4.0",
-    "@typescript-eslint/eslint-plugin": "^4.31.1",
-    "@typescript-eslint/parser": "^4.31.1",
-    "cypress": "^9.1.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-svelte3": "^3.2.1",
-    "faker": "^5.5.3",
-    "gh-pages": "^3.2.3",
-    "jest": "^27.4.7",
-    "prettier": "^2.4.1",
-    "prettier-plugin-svelte": "^2.4.0",
-    "svelte": "^3.42.6",
-    "svelte-check": "^2.2.6",
-    "svelte-preprocess": "^4.9.4",
-    "tslib": "^2.3.1",
-    "typescript": "^4.4.3"
-  },
-  "type": "module",
-  "dependencies": {
-    "@babel/preset-typescript": "^7.16.7",
-    "babel-jest": "^27.4.6",
-    "bootstrap-icons": "^1.7.1",
-    "sveltestrap": "^5.6.3"
-  },
-  "license": "MIT"
+	"name": "wichteln",
+	"version": "0.0.1",
+	"scripts": {
+		"dev": "svelte-kit dev",
+		"build": "svelte-kit build",
+		"preview": "svelte-kit preview",
+		"check": "svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
+		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+		"test:cypress": "cypress open -C cypress/cypress.json",
+		"test:cypress:integration": "cypress run --headless -C cypress/cypress.json",
+		"test:jest": "jest --collectCoverage=true",
+		"docker:up": "docker-compose run --service-ports --use-aliases wichteln-webapp bash",
+		"docker:down": "docker-compose down"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.16.7",
+		"@babel/preset-env": "^7.16.8",
+		"@sveltejs/adapter-static": "^1.0.0-next.21",
+		"@sveltejs/kit": "next",
+		"@types/jest": "^27.4.0",
+		"@typescript-eslint/eslint-plugin": "^4.31.1",
+		"@typescript-eslint/parser": "^4.31.1",
+		"cypress": "^9.1.0",
+		"eslint": "^7.32.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-svelte3": "^3.2.1",
+		"faker": "^5.5.3",
+		"gh-pages": "^3.2.3",
+		"jest": "^27.4.7",
+		"prettier": "^2.4.1",
+		"prettier-plugin-svelte": "^2.4.0",
+		"svelte": "^3.42.6",
+		"svelte-check": "^2.2.6",
+		"svelte-preprocess": "^4.9.4",
+		"tslib": "^2.3.1",
+		"typescript": "^4.4.3"
+	},
+	"type": "module",
+	"dependencies": {
+		"@babel/preset-typescript": "^7.16.7",
+		"babel-jest": "^27.4.6",
+		"bootstrap-icons": "^1.7.1",
+		"sveltestrap": "^5.6.3"
+	},
+	"license": "MIT"
 }
