--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,11 @@
-version: "3"
+version: '3'
 
-services: 
+services:
   wichteln-webapp:
     image: node:16
     container_name: wichteln-webapp
     working_dir: /app
     ports:
-      - "0.0.0.0:3000:3000"
+      - '0.0.0.0:3000:3000'
     volumes:
-    - ./:/app
-  
+      - ./:/app
